[gd_scene load_steps=17 format=4 uid="uid://byk72d1ahusm0"]

[ext_resource type="Script" uid="uid://dx0ixuhjfpc27" path="res://script/room.gd" id="1_ib0vb"]
[ext_resource type="AudioStream" uid="uid://dcwk2yq15m4rk" path="res://sound/music/primeira fase master.mp3" id="2_prs6n"]
[ext_resource type="TileSet" uid="uid://dah4dbx8ikesr" path="res://tileset/tileset_level.tres" id="3_dnlai"]
[ext_resource type="PackedScene" uid="uid://b38hnv5xd6mhe" path="res://scene/enemy/lynx/lynx.tscn" id="5_prs6n"]
[ext_resource type="Script" uid="uid://cx4wfruxwn6ja" path="res://script/cutscene_lynx_trigger.gd" id="7_dnlai"]

[sub_resource type="Curve2D" id="Curve2D_prs6n"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -320, 0, 0, 0, 0, 0, 272)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_dnlai"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -320, 0, 0, 0, 0, 0, 272)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_j7m8x"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -320, 0, 0, 0, 0, 0, 272)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_hlkct"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -312.26373, 0, 0, 0, 0, 0, 416.35162, 0)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_ynr0e"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -322.31113, 0, 0, 0, 0, 0, 414.4, 0)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_4cdtk"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -322.31113, 0, 0, 0, 0, 0, 414.4, 0)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_prs6n"]
size = Vector2(592, 72)

[sub_resource type="Animation" id="Animation_dnlai"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CutsceneRoot/lynx_placeholder_anim:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-20, -284)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CutsceneRoot/Totem/ColorRect2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CutsceneRoot/Totem:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(14, 22)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CutsceneRoot/Totem:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6, -93)]
}

[sub_resource type="Animation" id="Animation_prs6n"]
resource_name = "boss_intro"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CutsceneRoot/lynx_placeholder_anim:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-20, -284), Vector2(-20, -158), Vector2(-20, -284)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CutsceneRoot/Totem/ColorRect2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CutsceneRoot/Totem:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.0666667, 1.8000001),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(14, 22), Vector2(14, 22), Vector2(14, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CutsceneRoot/Totem:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.0666667, 1.8000001),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-6, -93), Vector2(-6, -93), Vector2(-6, -71)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dnlai"]
_data = {
&"RESET": SubResource("Animation_dnlai"),
&"boss_intro": SubResource("Animation_prs6n")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dnlai"]
size = Vector2(106, 16)

[node name="RoomRomeBoss" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ib0vb")
music_override = ExtResource("2_prs6n")

[node name="Map" type="TileMapLayer" parent="."]
z_index = -1
texture_filter = 1
tile_map_data = PackedByteArray("AADs//T/AAADABYAAADs//X/AAADABYAAADs//b/AAADABYAAADs//f/AAADABYAAADs//j/AAADABYAAADs//n/AAADABYAAADs//r/AAADABYAAADs//v/AAADABYAAADs//z/AAADABYAAADs//3/AAADABYAAADs//7/AAADABYAAADs////AAADABYAAADs/wAAAAADABYAAADs/wEAAAADABYAAADs/wIAAAADABYAAADs/wMAAAADABYAAADs/wQAAAADABYAAADs/wUAAAADABYAAADs/wYAAAADABYAAADs/wcAAAADABYAAADs/wgAAAADABYAAADs/wkAAAADABYAAADs/woAAAADABYAAADt//T/AAADABYAAADu//T/AAADABYAAADv//T/AAADABYAAADw//T/AAADABYAAADx//T/AAADABYAAADy//T/AAADABYAAADz//T/AAADABYAAAD0//T/AAADABYAAAD1//T/AAADABYAAAD2//T/AAADABYAAAD3//T/AAADABYAAAD4//T/AAADABYAAAD5//T/AAADABYAAAD6//T/AAADABYAAAD7//T/AAADABYAAAD8//T/AAADABYAAAD9//T/AAADABYAAAD+//T/AAADABYAAAD///T/AAADABYAAAAAAPT/AAADABYAAAABAPT/AAADABYAAAACAPT/AAADABYAAAADAPT/AAADABYAAAAEAPT/AAADABYAAAAFAPT/AAADABYAAAAGAPT/AAADABYAAAAHAPT/AAADABYAAAAIAPT/AAADABYAAAAJAPT/AAADABYAAAAKAPT/AAADABYAAAALAPT/AAADABYAAAAMAPT/AAADABYAAAANAPT/AAADABYAAAAOAPT/AAADABYAAAAPAPT/AAADABYAAAAQAPT/AAADABYAAAARAPT/AAADABYAAAASAPT/AAADABYAAAATAPT/AAADABYAAAATAPX/AAADABYAAAATAPb/AAADABYAAAATAPf/AAADABYAAAATAPj/AAADABYAAAATAPn/AAADABYAAAATAPr/AAADABYAAAATAPv/AAADABYAAAATAPz/AAADABYAAAATAP3/AAADABYAAAATAP7/AAADABYAAAATAP//AAADABYAAAATAAAAAAADABYAAAATAAEAAAADABYAAAATAAIAAAADABYAAAATAAMAAAADABYAAAATAAQAAAADABYAAAATAAUAAAADABYAAAATAAYAAAADABYAAAATAAcAAAADABYAAAATAAgAAAADABYAAAATAAkAAAADABYAAAATAAoAAAADABYAAADs/wsAAAADABYAAADt/wsAAAADABYAAADu/wsAAAADABYAAADv/wsAAAADABYAAADw/wsAAAADABYAAADx/wsAAAADABYAAADy/wsAAAADABYAAADz/wsAAAADABYAAAD0/wsAAAADABYAAAD1/wsAAAADABYAAAD2/wsAAAADABYAAAD3/wsAAAADABYAAAD4/wsAAAADABYAAAD5/wsAAAADABYAAAD6/wsAAAADABYAAAD7/wsAAAADABYAAAD8/wsAAAADABYAAAD9/wsAAAADABYAAAD+/wsAAAADABYAAAD//wsAAAADABYAAAAAAAsAAAADABYAAAABAAsAAAADABYAAAACAAsAAAADABYAAAADAAsAAAADABYAAAAEAAsAAAADABYAAAAFAAsAAAADABYAAAAGAAsAAAADABYAAAAHAAsAAAADABYAAAAIAAsAAAADABYAAAAJAAsAAAADABYAAAAKAAsAAAADABYAAAALAAsAAAADABYAAAAMAAsAAAADABYAAAANAAsAAAADABYAAAAOAAsAAAADABYAAAAPAAsAAAADABYAAAAQAAsAAAADABYAAAARAAsAAAADABYAAAASAAsAAAADABYAAAATAAsAAAADABYAAAD4//X/AAACAAQAAAD3//X/AAABAAQAAAD2//X/AAACAAQAAAD1//X/AAABAAQAAAD0//X/AAACAAQAAADz//X/AAABAAQAAADy//X/AAACAAQAAADx//X/AAABAAQAAADw//X/AAACAAQAAADv//X/AAABAAQAAADu//X/AAABAAQAAADt//X/AAACAAcAAADt//b/AAACAAgAAADt//f/AAACAAkAAADt//j/AAADAAMAAADt//n/AAADAAMAAADt//r/AAACAAoAAADt//v/AAADABYAAADt//z/AAACAAcAAADt//3/AAACAAgAAADt//7/AAACAAkAAADt////AAADAAMAAADt/wAAAAADAAMAAADt/wEAAAADAAMAAADt/wIAAAACAAoAAADt/wMAAAADABYAAADt/wQAAAACAAcAAADt/wUAAAACAAgAAADt/wYAAAACAAkAAADt/wcAAAADAAMAAADt/wgAAAADAAMAAADt/wkAAAACAAoAAADt/woAAAADABYAAADu/woAAAADABYAAADu/wkAAAABAAAAAADu/wgAAAADAAsAAADu/wcAAAADAAsAAADu/wYAAAABAAYAAADu/wUAAAABAAUAAADu/wQAAAABAAQAAADu/wMAAAADABYAAADu/wIAAAABAAAAAADu/wEAAAADAAsAAADu/wAAAAADAAsAAADu////AAADAAsAAADu//7/AAABAAYAAADu//3/AAABAAUAAADu//z/AAABAAQAAADu//v/AAADABYAAADu//r/AAABAAAAAADu//n/AAADAAsAAADu//j/AAADAAsAAADu//f/AAABAAYAAADu//b/AAABAAUAAADv//b/AAABAAUAAADv//f/AAABAAYAAADv//j/AAADAAsAAADv//n/AAADAA0AAADv//r/AAACAAAAAADv//v/AAADABYAAADv//z/AAACAAQAAADv//3/AAACAAUAAADv//7/AAACAAYAAADv////AAADAAsAAADv/wAAAAADAA0AAADv/wEAAAADAAsAAADv/wIAAAACAAAAAADv/wMAAAADABYAAADv/wQAAAACAAQAAADv/wgAAAABAAsAAADv/wkAAAABAAAAAADv/woAAAADABYAAADw/woAAAADABYAAADw/wkAAAABAAAAAADw/wgAAAADAA0AAADw/wQAAAABAAQAAADw/wMAAAADABYAAADw/wIAAAABAAAAAADw/wEAAAADAAsAAADw/wAAAAADAA0AAADw////AAADAAsAAADw//7/AAABAAYAAADw//3/AAABAAUAAADw//z/AAABAAQAAADw//v/AAADABYAAADw//r/AAABAAAAAADw//n/AAADAA0AAADw//f/AAACAAYAAADw//b/AAACAAUAAADx//b/AAABAAUAAADx//f/AAABAAYAAADx//7/AAACAAYAAADx////AAADAAsAAADx/wgAAAADAA0AAADx/wkAAAABAAAAAADx/woAAAADABYAAADy/woAAAADABYAAADy/wkAAAABAAAAAADy/wgAAAADAA0AAADy////AAADAAsAAADy//7/AAABAAYAAADy//f/AAACAAYAAADy//b/AAACAAUAAADz//b/AAABAAUAAADz//f/AAABAAYAAADz//7/AAADAAYAAADz////AAADAAsAAADz/wgAAAADAA0AAADz/wkAAAABAAAAAADz/woAAAADABYAAAD0/woAAAADABYAAAD0/wkAAAABAAAAAAD0/wgAAAADAA0AAAD0/wcAAAADAAsAAAD0/wYAAAADAAsAAAD0////AAADAAsAAAD0//7/AAADAAsAAAD0//3/AAADAAsAAAD0//f/AAACAAYAAAD0//b/AAACAAUAAAD1//b/AAABAAUAAAD1//f/AAABAAYAAAD1//3/AAADAAsAAAD1//7/AAADAAsAAAD1/wQAAAADAAsAAAD1/wUAAAADAAsAAAD1/wYAAAADAAsAAAD1/wcAAAADAAsAAAD1/wgAAAADAA0AAAD1/wkAAAABAAAAAAD1/woAAAADABYAAAD2/woAAAADABYAAAD2/wkAAAABAAAAAAD2/wgAAAADAA0AAAD2/wcAAAADAAwAAAD2/wYAAAADAAwAAAD2/wUAAAADAAwAAAD2/wQAAAADAAwAAAD2//7/AAADAAwAAAD2//3/AAADAAwAAAD2//f/AAACAAYAAAD2//b/AAACAAUAAAD3//b/AAABAAUAAAD3//f/AAABAAYAAAD3//3/AAADAAsAAAD3//7/AAADAAsAAAD3/wQAAAADAAsAAAD3/wUAAAADAAsAAAD3/wYAAAADAAsAAAD3/wcAAAADAAsAAAD3/wgAAAADAA0AAAD3/wkAAAABAAAAAAD3/woAAAADABYAAAD4/woAAAADABYAAAD4/wkAAAABAAAAAAD4/wgAAAADAA0AAAD5//X/AAABAAQAAAD6//X/AAACAAQAAAD5/wgAAAADAA0AAAD5/wkAAAABAAAAAAD5/woAAAADABYAAAD6/woAAAADABYAAAD6/wkAAAABAAAAAAD6/wgAAAADAA0AAAD7//f/AAABAAYAAAD7//b/AAABAAUAAAD7//X/AAABAAQAAAD8//X/AAACAAQAAAD8//b/AAACAAUAAAD8//f/AAACAAYAAAD8//3/AAADAAUAAAD8//7/AAADAAYAAAD7/wcAAAADAAsAAAD7/wgAAAADAA0AAAD7/wkAAAABAAAAAAD7/woAAAADABYAAAD8/woAAAADABYAAAD8/wkAAAABAAAAAAD8/wgAAAADAA0AAAD8/wcAAAADAAsAAAD8/wYAAAADAAYAAAD8/wUAAAADAAUAAAD8/wQAAAADAAQAAAD9/wQAAAADAAsAAAD9//7/AAADAAsAAAD9//3/AAADAAsAAAD9//f/AAABAAYAAAD9//b/AAABAAUAAAD9//X/AAABAAQAAAD+//X/AAACAAQAAAD+//b/AAACAAUAAAD+//f/AAACAAYAAAD+/wUAAAADAAsAAAD9/wUAAAADAAsAAAD9/wYAAAADAAsAAAD9/wcAAAADAAsAAAD9/wgAAAADAA0AAAD9/wkAAAABAAAAAAD9/woAAAADABYAAAD+/woAAAADABYAAAD+/wkAAAABAAAAAAD+/wgAAAADAA0AAAD+/wcAAAADAAsAAAD+/wYAAAADAAsAAAD///f/AAABAAYAAAD///b/AAABAAUAAAD///X/AAABAAQAAAAAAPX/AAACAAQAAAAAAPb/AAACAAUAAAAAAPf/AAACAAYAAAD//wgAAAADAA0AAAD//wkAAAABAAAAAAD//woAAAADABYAAAAAAAoAAAADABYAAAABAAgAAAADAA0AAAABAP//AAADAAsAAAABAPf/AAABAAYAAAABAPb/AAABAAUAAAABAPX/AAABAAQAAAACAPX/AAACAAQAAAACAPb/AAACAAUAAAACAPf/AAACAAYAAAACAP3/AAADAAsAAAACAP7/AAADAAsAAAACAP//AAADAAsAAAACAAAAAAADAA0AAAACAAEAAAADAAsAAAACAAIAAAADAAsAAAACAAMAAAADAAsAAAACAAQAAAADAAsAAAACAAUAAAADAAsAAAACAAYAAAADAAsAAAACAAcAAAADAAsAAAACAAgAAAADAA0AAAACAAkAAAABAAAAAAABAAkAAAABAAAAAAABAAoAAAADABYAAAACAAoAAAADABYAAAADAAoAAAADABYAAAADAAkAAAABAAAAAAADAAgAAAADAA0AAAADAAcAAAADAAsAAAADAAYAAAAAAAYAAAADAAUAAAAAAAUAAAADAAQAAAAAAAQAAAADAAMAAAAAAAEAAAADAAIAAAAAAAAAAAADAAEAAAADAAsAAAADAAAAAAADAA0AAAADAP//AAADAAsAAAADAP7/AAAAAAYAAAADAP3/AAAAAAUAAAADAPf/AAABAAYAAAADAPb/AAABAAUAAAADAPX/AAABAAQAAAAEAPX/AAACAAQAAAAEAPb/AAACAAUAAAAEAPf/AAACAAYAAAAEAP3/AAABAAUAAAAEAP7/AAABAAYAAAAEAP//AAADAAsAAAAEAAAAAAADAA0AAAAEAAEAAAADAAsAAAAEAAIAAAABAAAAAAAEAAMAAAADABYAAAAEAAQAAAABAAQAAAAEAAUAAAABAAUAAAAEAAYAAAABAAYAAAAEAAcAAAADAAsAAAAEAAgAAAADAA0AAAAEAAkAAAABAAAAAAAEAAoAAAADABYAAAAFAAoAAAADABYAAAAFAAkAAAABAAAAAAAFAAgAAAADAA0AAAAFAAcAAAADAAsAAAAFAAYAAAADAAYAAAAFAAUAAAADAAUAAAAFAAQAAAADAAQAAAAFAAMAAAADAAEAAAAFAAIAAAADAAAAAAAFAAEAAAADAAsAAAAFAP//AAADAAsAAAAFAP7/AAADAAYAAAAFAPf/AAABAAYAAAAFAPb/AAABAAUAAAAFAPX/AAABAAQAAAAGAPX/AAACAAQAAAAGAPb/AAACAAUAAAAGAPf/AAACAAYAAAAGAP7/AAADAAsAAAAGAAgAAAADAA0AAAAGAAkAAAABAAAAAAAGAAoAAAADABYAAAAHAAoAAAADABYAAAAHAAkAAAABAAAAAAAHAAgAAAADAA0AAAAHAP7/AAADAAsAAAAHAPf/AAABAAYAAAAHAPb/AAABAAUAAAAHAPX/AAABAAQAAAAIAPX/AAACAAQAAAAIAPb/AAACAAUAAAAIAPf/AAACAAYAAAAIAAoAAAADABYAAAAJAAoAAAADABYAAAAJAAYAAAADAAwAAAAJAPf/AAABAAYAAAAJAPb/AAABAAUAAAAJAPX/AAABAAQAAAAKAPX/AAACAAQAAAAKAPb/AAACAAUAAAAKAPf/AAACAAYAAAAKAAYAAAADAAsAAAAKAAoAAAADABYAAAALAAoAAAADABYAAAALAAkAAAABAAAAAAALAAgAAAADAA0AAAALAAcAAAADAAsAAAALAAEAAAADAAsAAAALAAAAAAADAA0AAAALAP//AAADAAsAAAALAP7/AAADAAsAAAALAP3/AAADAAsAAAALAPf/AAABAAYAAAALAPb/AAABAAUAAAALAPX/AAABAAQAAAAMAPX/AAACAAQAAAAMAPb/AAACAAUAAAAMAPf/AAACAAYAAAAMAP7/AAAAAAYAAAAMAP//AAADAAsAAAAMAAAAAAADAA0AAAAMAAEAAAADAAsAAAAMAAcAAAADAAsAAAAMAAgAAAADAA0AAAAMAAkAAAABAAAAAAAMAAoAAAADABYAAAANAAoAAAADABYAAAANAAkAAAABAAAAAAANAAgAAAADAA0AAAANAAcAAAADAAsAAAANAP7/AAABAAYAAAANAPf/AAABAAYAAAANAPb/AAABAAUAAAANAPX/AAABAAQAAAAOAPX/AAACAAQAAAAOAPb/AAACAAUAAAAOAPf/AAACAAYAAAAOAP7/AAACAAYAAAAOAAcAAAADAAsAAAAOAAgAAAADAA0AAAAOAAkAAAABAAAAAAAOAAoAAAADABYAAAAPAAoAAAADABYAAAAPAAkAAAABAAAAAAAPAAgAAAADAA0AAAAPAAcAAAADAAsAAAAPAAYAAAABAAYAAAAPAAUAAAABAAUAAAAPAAQAAAABAAQAAAAPAP7/AAABAAYAAAAPAPf/AAABAAYAAAAPAPb/AAABAAUAAAAPAPX/AAABAAQAAAAQAPf/AAACAAYAAAAQAPj/AAADAAsAAAAQAPn/AAADAAsAAAAQAP7/AAACAAYAAAAQAAQAAAACAAQAAAAQAAUAAAACAAUAAAAQAAYAAAACAAYAAAAQAAcAAAADAAsAAAAQAAgAAAADAAsAAAAQAAkAAAABAAAAAAAQAAoAAAADABYAAAARAAoAAAADABYAAAARAAkAAAABAAAAAAARAAgAAAADAAsAAAARAAcAAAADAAsAAAARAAYAAAABAAYAAAARAAUAAAABAAUAAAARAAQAAAABAAQAAAARAAMAAAADABYAAAARAAIAAAACAAAAAAARAAEAAAADAAsAAAARAAAAAAADAAsAAAARAP//AAADAAsAAAARAP7/AAABAAYAAAARAPn/AAADAAsAAAARAPj/AAADAAsAAAARAPf/AAACAAYAAAASAPX/AAADAAcAAAASAPb/AAADAAgAAAASAPf/AAADAAkAAAASAPj/AAAAAAMAAAASAPn/AAAAAAMAAAASAPr/AAADAAoAAAASAPv/AAADABYAAAASAPz/AAADAAcAAAASAP3/AAAAAAQAAAASAP7/AAAAAAUAAAASAP//AAAAAAYAAAASAAAAAAADAAsAAAASAAEAAAAAAAAAAAASAAIAAAADAAoAAAASAAMAAAADABYAAAASAAQAAAADAAcAAAASAAUAAAADAAgAAAASAAYAAAADAAkAAAASAAcAAAAAAAMAAAASAAgAAAAAAAMAAAASAAkAAAADAAoAAAASAAoAAAADABYAAAD1////AAADAAsAAAD1/wAAAAADAA0AAAD1/wEAAAADAAsAAAD1/wIAAAADAAsAAAD1/wMAAAADAAsAAAD2////AAADAAwAAAD2/wAAAAADAA0AAAD2/wEAAAADAAwAAAD2/wIAAAADAAwAAAD2/wMAAAADAAwAAAD3////AAADAAsAAAD3/wAAAAADAA0AAAD3/wEAAAADAAsAAAD3/wIAAAADAAsAAAD3/wMAAAADAAsAAAD4////AAADAAsAAAD5////AAADAAsAAAD6////AAADAAsAAAD7////AAADAAsAAAD7/wAAAAADAA0AAAD7/wEAAAADAAsAAAD8////AAADAAsAAAD8/wAAAAADAA0AAAD8/wEAAAADAAsAAAD8/wIAAAADAAAAAAD8/wMAAAADAAEAAAD9////AAADAAsAAAD9/wAAAAADAA0AAAD9/wEAAAADAAsAAAD9/wIAAAADAAsAAAD9/wMAAAADAAsAAAD4//b/AAACAAUAAAD5//b/AAABAAUAAAD6//b/AAACAAUAAAD6//f/AAACAAYAAAD4//f/AAACAAYAAAD5//f/AAABAAYAAAAFAAAAAAADAA0AAAAAAAkAAAABAAAAAAAAAAgAAAADAA0AAAAQAPX/AAACAAQAAAAQAPb/AAACAAUAAAARAPX/AAACAAQAAAARAPb/AAACAAUAAADv/wYAAAACAAYAAADv/wcAAAADAAsAAADw/wYAAAABAAYAAADw/wcAAAADAAsAAADv/wUAAAACAAUAAADw/wUAAAABAAUAAAAIAP7/AAADAAsAAAD/////AAADAAwAAAAAAP//AAADAAsAAAANAAAAAAADAA0AAAANAAEAAAADAAsAAAAOAAAAAAADAA0AAAAOAAEAAAADAAsAAAAPAAAAAAADAA0AAAAPAAEAAAADAAsAAAAPAAIAAAACAAAAAAAPAAMAAAADABYAAAAQAAAAAAADAAsAAAAQAAEAAAADAAsAAAAQAAIAAAABAAAAAAAQAAMAAAADABYAAAANAP//AAADAAsAAAAOAP//AAADAAsAAAAPAP//AAADAAsAAAAQAP//AAADAAsAAAAJAP3/AAADAAwAAAAJAP7/AAADAAwAAAAJAP//AAADAAwAAAAJAAAAAAADAA0AAAAJAAEAAAADAAwAAAAJAAIAAAADAAwAAAAJAAMAAAADAAwAAAAJAAQAAAADAAwAAAAJAAUAAAADAAwAAAAKAP3/AAADAAsAAAAKAP7/AAADAAsAAAAKAP//AAADAAsAAAAKAAAAAAADAA0AAAAKAAEAAAADAAsAAAAKAAIAAAADAAsAAAAKAAMAAAADAAsAAAAKAAQAAAADAAsAAAAKAAUAAAADAAsAAAAGAP//AAADAAsAAAAHAP//AAADAAsAAAAIAP//AAADAAsAAAD+//3/AAADAAsAAAD+//7/AAADAAsAAAD+////AAADAAsAAAD+/wAAAAADAA0AAAD+/wEAAAADAAsAAAD+/wIAAAADAAsAAAD+/wMAAAADAAsAAAD+/wQAAAADAAsAAAAIAAgAAAADAA0AAAAIAAkAAAABAAAAAAAJAAkAAAABAAAAAAAKAAkAAAABAAAAAAAJAAcAAAADAAwAAAAKAAgAAAADAA0AAAAKAAcAAAADAAsAAAAJAAgAAAADAA0AAAD0//n/AAADAA0AAAD0//r/AAADAAsAAAD0//v/AAADAAsAAAD0//z/AAADAAsAAAD1//n/AAADAA0AAAD1//r/AAADAAsAAAD1//v/AAADAAsAAAD1//z/AAADAAsAAAD2//n/AAADAA0AAAD2//r/AAADAAwAAAD2//v/AAADAAwAAAD2//z/AAADAAwAAAD3//n/AAADAA0AAAD3//r/AAADAAsAAAD3//v/AAADAAsAAAD3//z/AAADAAsAAAD7//n/AAADAA0AAAD8//n/AAADAA0AAAD8//r/AAADAAAAAAD8//v/AAADAAEAAAD8//z/AAADAAQAAAD9//n/AAADAA0AAAD9//r/AAADAAsAAAD9//v/AAADAAsAAAD9//z/AAADAAsAAAD+//n/AAADAA0AAAD+//r/AAADAAsAAAD+//v/AAADAAsAAAD+//z/AAADAAsAAAACAPn/AAADAA0AAAACAPr/AAADAAsAAAACAPv/AAADAAsAAAACAPz/AAADAAsAAAADAPn/AAADAA0AAAADAPr/AAAAAAAAAAADAPv/AAAAAAEAAAADAPz/AAAAAAQAAAAEAPn/AAADAA0AAAAEAPr/AAABAAAAAAAEAPv/AAADABYAAAAEAPz/AAABAAQAAAAJAPn/AAADAA0AAAAJAPr/AAADAAwAAAAJAPv/AAADAAwAAAAJAPz/AAADAAwAAAAKAPn/AAADAA0AAAAKAPr/AAADAAsAAAAKAPv/AAADAAsAAAAKAPz/AAADAAsAAAALAPn/AAADAA0AAAALAPr/AAADAAsAAAALAPv/AAADAAsAAAALAPz/AAADAAsAAAAMAPn/AAADAA0AAAANAPn/AAADAA0AAAAOAPn/AAADAA0AAAAPAPn/AAADAA0AAADx//j/AAADAAsAAADy//j/AAADAAsAAADz//j/AAADAAsAAAD0//j/AAADAAsAAAD1//j/AAADAAsAAAD2//j/AAADAAwAAAD3//j/AAADAAsAAAD4//j/AAADAAsAAAD5//j/AAADAAsAAAD6//j/AAADAAsAAAD7//j/AAADAAsAAAD8//j/AAADAAsAAAD9//j/AAADAAsAAAD+//j/AAADAAsAAAD///j/AAADAAwAAAAAAPj/AAADAAsAAAABAPj/AAADAAsAAAACAPj/AAADAAsAAAADAPj/AAADAAsAAAAEAPj/AAADAAsAAAAFAPj/AAADAAsAAAAGAPj/AAADAAsAAAAHAPj/AAADAAsAAAAIAPj/AAADAAsAAAAJAPj/AAADAAwAAAAKAPj/AAADAAsAAAALAPj/AAADAAsAAAAMAPj/AAADAAsAAAANAPj/AAADAAsAAAAOAPj/AAADAAsAAAAPAPj/AAADAAsAAADw//j/AAADAAsAAAD0/wMAAAADAAsAAAD0/wQAAAADAAsAAAD0/wUAAAADAAsAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAEAAAAMAAQAAAAAAAQAAAAMAAUAAAAAAAUAAAAMAAYAAAAAAAYAAAANAAIAAAABAAAAAAANAAMAAAADABYAAAANAAQAAAABAAQAAAANAAUAAAABAAUAAAANAAYAAAABAAYAAAAOAAIAAAABAAAAAAAOAAMAAAADABYAAAAOAAQAAAACAAQAAAAOAAUAAAACAAUAAAAOAAYAAAACAAYAAADx/wMAAAADABYAAADx/wQAAAACAAQAAADx/wUAAAACAAUAAADx/wYAAAACAAYAAADy/wMAAAADABYAAADy/wQAAAABAAQAAADy/wUAAAABAAUAAADy/wYAAAABAAYAAADz/wMAAAADAAEAAADz/wQAAAADAAQAAADz/wUAAAADAAUAAADz/wYAAAADAAYAAADx/wIAAAACAAAAAADy/wIAAAABAAAAAADz/wIAAAADAAAAAADx//r/AAACAAAAAADx//v/AAADABYAAADx//z/AAACAAQAAADx//3/AAACAAUAAADy//r/AAABAAAAAADy//v/AAADABYAAADy//z/AAABAAQAAADy//3/AAABAAUAAADz//r/AAADAAAAAADz//v/AAADAAEAAADz//z/AAADAAQAAADz//3/AAADAAUAAAAFAPr/AAADAAAAAAAFAPv/AAADAAEAAAAFAPz/AAADAAQAAAAFAP3/AAADAAUAAAD6/wIAAAAAAAAAAAD6/wMAAAAAAAEAAAD6/wQAAAAAAAQAAAD6/wUAAAAAAAUAAAD6/wYAAAAAAAYAAAD7/wIAAAABAAAAAAD7/wMAAAADABYAAAD7/wQAAAABAAQAAAD7/wUAAAABAAUAAAD7/wYAAAABAAYAAAD6//r/AAAAAAAAAAD6//v/AAAAAAEAAAD6//z/AAAAAAQAAAD6//3/AAAAAAUAAAD6//7/AAAAAAYAAAD7//r/AAABAAAAAAD7//v/AAADABYAAAD7//z/AAABAAQAAAD7//3/AAABAAUAAAD7//7/AAABAAYAAAD4//n/AAADAA0AAAD4//r/AAADAAsAAAD4//v/AAADAAsAAAD4//z/AAADAAsAAAD4//3/AAADAAsAAAD4//7/AAADAAsAAAD4/wAAAAADAA0AAAD4/wEAAAADAAsAAAD4/wIAAAADAAsAAAD4/wMAAAADAAsAAAD4/wQAAAADAAsAAAD4/wUAAAADAAsAAAD4/wYAAAADAAsAAAD4/wcAAAADAAsAAAD5//n/AAADAA0AAAD5//r/AAADAAsAAAD5//v/AAADAAsAAAD5//z/AAADAAsAAAD5//3/AAADAAsAAAD5//7/AAADAAsAAAD5/wAAAAADAA0AAAD5/wEAAAADAAsAAAD5/wIAAAADAAsAAAD5/wMAAAADAAsAAAD5/wQAAAADAAsAAAD5/wUAAAADAAsAAAD5/wYAAAADAAsAAAD5/wcAAAADAAsAAAD6/wcAAAADAAsAAADx/wcAAAADAAsAAADy/wcAAAADAAsAAADz/wcAAAADAAsAAADx/wAAAAADAA0AAADx/wEAAAADAAsAAADy/wAAAAADAA0AAADy/wEAAAADAAsAAADz/wAAAAADAA0AAADz/wEAAAADAAsAAAD0/wAAAAADAA0AAAD0/wEAAAADAAsAAAD0/wIAAAADAAsAAAD6/wAAAAADAA0AAAD6/wEAAAADAAsAAADx//n/AAADAA0AAADy//n/AAADAA0AAADz//n/AAADAA0AAAD6//n/AAADAA0AAAD///n/AAADAA0AAAD///r/AAADAAwAAAD///v/AAADAAwAAAD///z/AAADAAwAAAD///3/AAADAAwAAAD///7/AAADAAwAAAD//wAAAAADAA0AAAD//wEAAAADAAsAAAD//wIAAAADAAsAAAD//wMAAAADAAsAAAD//wQAAAADAAsAAAD//wUAAAADAAsAAAD//wYAAAADAAsAAAD//wcAAAADAAsAAAAAAPn/AAADAA0AAAAAAPr/AAADAAsAAAAAAPv/AAADAAsAAAAAAPz/AAADAAsAAAAAAP3/AAADAAsAAAAAAP7/AAADAAsAAAAAAAAAAAADAA0AAAAAAAEAAAADAAwAAAAAAAIAAAADAAwAAAAAAAMAAAADAAwAAAAAAAQAAAADAAwAAAAAAAUAAAADAAwAAAAAAAYAAAADAAwAAAAAAAcAAAADAAwAAAABAPn/AAADAA0AAAABAPr/AAADAAsAAAABAPv/AAADAAsAAAABAPz/AAADAAsAAAABAP3/AAADAAsAAAABAP7/AAADAAsAAAABAAAAAAADAA0AAAABAAEAAAADAAsAAAABAAIAAAADAAsAAAABAAMAAAADAAsAAAABAAQAAAADAAsAAAABAAUAAAADAAsAAAABAAYAAAADAAsAAAABAAcAAAADAAsAAAAFAPn/AAADAA0AAAAGAPn/AAADAA0AAAAHAPn/AAADAA0AAAAIAPn/AAADAA0AAAAGAPr/AAADAAsAAAAGAPv/AAADAAsAAAAGAPz/AAADAAsAAAAGAP3/AAADAAsAAAAGAAAAAAADAA0AAAAGAAEAAAADAAsAAAAGAAIAAAADAAsAAAAGAAMAAAADAAsAAAAGAAQAAAADAAsAAAAGAAUAAAADAAsAAAAGAAYAAAADAAsAAAAGAAcAAAADAAsAAAAHAPr/AAADAAsAAAAHAPv/AAADAAsAAAAHAPz/AAADAAsAAAAHAP3/AAADAAsAAAAHAAAAAAADAA0AAAAHAAEAAAADAAsAAAAHAAIAAAADAAsAAAAHAAMAAAADAAsAAAAHAAQAAAADAAsAAAAHAAUAAAADAAsAAAAHAAYAAAADAAsAAAAHAAcAAAADAAsAAAAIAPr/AAADAAsAAAAIAPv/AAADAAsAAAAIAPz/AAADAAsAAAAIAP3/AAADAAsAAAAIAAAAAAADAA0AAAAIAAEAAAADAAsAAAAIAAIAAAADAAsAAAAIAAMAAAADAAsAAAAIAAQAAAADAAsAAAAIAAUAAAADAAsAAAAIAAYAAAADAAsAAAAIAAcAAAADAAsAAAALAAIAAAADAAsAAAALAAMAAAADAAsAAAALAAQAAAADAAsAAAALAAUAAAADAAsAAAALAAYAAAADAAsAAAAMAPr/AAAAAAAAAAAMAPv/AAAAAAEAAAAMAPz/AAAAAAQAAAAMAP3/AAAAAAUAAAANAPr/AAABAAAAAAANAPv/AAADABYAAAANAPz/AAABAAQAAAANAP3/AAABAAUAAAAOAPr/AAABAAAAAAAOAPv/AAADABYAAAAOAPz/AAACAAQAAAAOAP3/AAACAAUAAAAPAPr/AAACAAAAAAAPAPv/AAADABYAAAAPAPz/AAABAAQAAAAPAP3/AAABAAUAAAAQAPr/AAABAAAAAAAQAPv/AAADABYAAAAQAPz/AAACAAQAAAAQAP3/AAACAAUAAAARAPr/AAACAAAAAAARAPv/AAADABYAAAARAPz/AAABAAQAAAARAP3/AAABAAUAAAA=")
tile_set = ExtResource("3_dnlai")
navigation_enabled = false
navigation_visibility_mode = 1
metadata/_edit_lock_ = true

[node name="LynxBossBase" parent="." instance=ExtResource("5_prs6n")]
unique_name_in_owner = true
active = false

[node name="EnemyPath2D" parent="LynxBossBase/LynxAttackRush" index="0"]
curve = SubResource("Curve2D_prs6n")

[node name="EnemyPath2D2" parent="LynxBossBase/LynxAttackRush" index="1"]
position = Vector2(144, 0)
curve = SubResource("Curve2D_dnlai")

[node name="EnemyPath2D3" parent="LynxBossBase/LynxAttackRush" index="2"]
curve = SubResource("Curve2D_j7m8x")

[node name="EnemyPath2D4" parent="LynxBossBase/LynxAttackRush" index="3"]
curve = SubResource("Curve2D_hlkct")

[node name="EnemyPath2D5" parent="LynxBossBase/LynxAttackRush" index="4"]
curve = SubResource("Curve2D_ynr0e")

[node name="EnemyPath2D6" parent="LynxBossBase/LynxAttackRush" index="5"]
curve = SubResource("Curve2D_4cdtk")

[node name="TargetArea2D2" parent="LynxBossBase" index="4"]
position = Vector2(144, 0)

[node name="CollisionShape2D" parent="LynxBossBase/TargetArea2D5" index="0"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_prs6n")

[node name="CollisionShape2D" parent="LynxBossBase/TargetArea2D6" index="0"]
position = Vector2(0, 4)

[node name="FrontHole" parent="LynxBossBase" index="9"]
offset_left = -192.0
offset_top = -176.0
offset_right = -96.0

[node name="FrontHole2" parent="LynxBossBase" index="10"]
offset_left = -48.0
offset_top = -176.0
offset_right = 48.0

[node name="FrontHole3" parent="LynxBossBase" index="11"]
offset_left = 96.0
offset_top = -176.0

[node name="CutsceneRoot" type="Node2D" parent="."]

[node name="lynx_placeholder_anim" type="ColorRect" parent="CutsceneRoot"]
offset_left = -20.0
offset_top = -284.0
offset_right = 20.0
offset_bottom = -244.0

[node name="ColorRect2" type="ColorRect" parent="CutsceneRoot/lynx_placeholder_anim"]
layout_mode = 0
offset_left = 6.0
offset_top = 27.0
offset_right = 34.0
offset_bottom = 65.0

[node name="ColorRect3" type="ColorRect" parent="CutsceneRoot/lynx_placeholder_anim/ColorRect2"]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 11.0
offset_bottom = 12.0
color = Color(0, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="CutsceneRoot/lynx_placeholder_anim/ColorRect2"]
layout_mode = 0
offset_left = 15.0
offset_top = 3.0
offset_right = 24.0
offset_bottom = 12.0
color = Color(0, 0, 0, 1)

[node name="Totem" type="ColorRect" parent="CutsceneRoot"]
offset_left = -6.0
offset_top = -93.0
offset_right = 8.0
offset_bottom = -71.0

[node name="ColorRect2" type="ColorRect" parent="CutsceneRoot/Totem"]
layout_mode = 0
offset_left = 3.0
offset_top = -3.0
offset_right = 11.0
offset_bottom = 5.0
color = Color(1, 0.85, 0, 1)

[node name="CutscenePlayer" type="AnimationPlayer" parent="CutsceneRoot"]
root_node = NodePath("../..")
root_motion_local = true
libraries = {
&"": SubResource("AnimationLibrary_dnlai")
}
script = ExtResource("7_dnlai")

[node name="TriggerBossArea" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -75)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerBossArea"]
position = Vector2(80, 75)
rotation = -1.5707964
shape = SubResource("RectangleShape2D_dnlai")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TriggerBossArea"]
position = Vector2(144, 27)
shape = SubResource("RectangleShape2D_dnlai")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="TriggerBossArea"]
position = Vector2(144, 131)
shape = SubResource("RectangleShape2D_dnlai")

[node name="DoorLayer" type="TileMapLayer" parent="."]
position = Vector2(288, -16)
tile_map_data = PackedByteArray("AAAAAP7/BAADABEAABAAAP//BAADABIAADAAAAAABAADABIAADAAAAIABAADABMAABAAAAEABAADABIAADA=")
tile_set = ExtResource("3_dnlai")
navigation_enabled = false

[connection signal="animation_finished" from="CutsceneRoot/CutscenePlayer" to="CutsceneRoot/CutscenePlayer" method="_on_animation_finished"]
[connection signal="body_entered" from="TriggerBossArea" to="CutsceneRoot/CutscenePlayer" method="_on_trigger_boss_area_body_entered"]
[connection signal="body_entered" from="TriggerBossArea" to="TriggerBossArea" method="_on_body_entered"]

[editable path="LynxBossBase"]
[editable path="LynxBossBase/LynxAttackRanged"]
[editable path="LynxBossBase/LynxAttackRush"]
